# chatserver

./: .gitignore  CMakeLists.txt  README.md
ChatServer/: .config  AsioIOServicePool.cc  AsioIOServicePool.hpp  CMakeLists.txt  CServer.cc  CSession.cc  CSession.hpp  ChatGrpcClient.cc  ChatServer.cc  ChatServerService.cc  ChatServerService.hpp  MysqlDao.cc  MysqlManager.cc  MysqlManager.hpp  RedisManager.cc  Singleton.hpp  StatusGrpcClient.cc  StatusGrpcClient.hpp  UserManager.cc  data.hpp  message.grpc.pb.h  message.pb.cc  message.proto
ChatServer2/: .config  AsioIOServicePool.cc  CMakeLists.txt  CServer.cc  CServer.hpp  ChatGrpcClient.hpp  ChatServer.cc  LogicSystem.cc  LogicSystem.hpp  MsgNode.cc  MsgNode.hpp  MysqlDao.hpp  RedisManager.cc  RedisManager.hpp  UserManager.hpp  message.grpc.pb.cc  message.pb.h  utilities.hpp
GateServer/: .config  AsioIOServicePool.hpp  CMakeLists.txt  CServer.cc  CServer.hpp  ConfigManager.cc  ConfigManager.hpp  GateServer.cc  HttpConnection.cc  HttpConnection.hpp  LogicSystem.cc  LogicSystem.hpp  MysqlDao.cc  MysqlDao.hpp  MysqlManager.cc  MysqlManager.hpp  RedisManager.cc  RedisManager.hpp  StatusGrpcClient.cc  StatusGrpcClient.hpp  VerifyGrpcClient.cc  VerifyGrpcClient.hpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  utilities.hpp
StatusServer/: .config  CMakeLists.txt  MysqlDao.cc  MysqlDao.hpp  MysqlManager.cc  RedisManager.hpp  StatusServer.cc  StatusServerService.cc  StatusServerService.hpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.h  message.proto  utilities.hpp
VerifyServer/: config.js  config.json  package-lock.json  package.json  redis.js  server.js
